test/negative/108_positional_after_named.err
108_positional_after_named.fx:3:9: error: the appropriate match for 'g' of type '((int, {a: int}) -> <unknown>)' is not found.
Candidates:
 'g: ({a: int; b: int} -> int)' defined at 108_positional_after_named.fx:2:1


1 errors occured during type checking.
